Changed post form action from 127.0.0.1 to https://crispy-potato-55xqw9xxxp5fv75g-5000.app.github.dev/predict/

--- a/template/index.html
+++ b/template/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <form action="http://127.0.0.1/predict/" method="post">
+        <form action="https://crispy-potato-55xqw9xxxp5fv75g-5000.app.github.dev/predict/" method="post">
         <input type="number" placeholder="NO2 Mean Value" name="no2_value"><br><p></p>
         <input type="number" placeholder="SO2 Mean Value" name="so2_value"><br><p></p>
         <input type="number" placeholder="O3 Mean Value" name="o3_value"><br><p></p>
