--- a/template/index.html
+++ b/template/index.html
@@ -8,10 +8,10 @@
 <body>
     <div>
         <form action="https://crispy-potato-55xqw9xxxp5fv75g-5000.app.github.dev/predict/" method="post">
-        <input type="number" placeholder="NO2 Mean Value" name="no2_value"><br><p></p>
-        <input type="number" placeholder="SO2 Mean Value" name="so2_value"><br><p></p>
-        <input type="number" placeholder="O3 Mean Value" name="o3_value"><br><p></p>
-        <input type="number" placeholder="CO Mean Value" name="co_value"><br><p></p>
+        <input type="" placeholder="NO2 Mean Value" name="no2_value" step="0.001"><br><p></p>
+        <input type="number" placeholder="SO2 Mean Value" name="so2_value" step="0.001><br><p></p>
+        <input type="number" placeholder="O3 Mean Value" name="o3_value" step="0.001><br><p></p>
+        <input type="number" placeholder="CO Mean Value" name="co_value" step="0.001><br><p></p>
         <input type="submit" name="Submit">
         </form>
 
