--- a/template/index.html
+++ b/template/index.html
@@ -18,7 +18,7 @@
         </div>
         
     <div class="field" style="width:50cqmax;">
-        <form action="https://crispy-potato-55xqw9xxxp5fv75g-5000.app.github.dev/predict/" method="post" target="dummyframe">
+        <form action="https://aqi-prediction-app-1.onrender.com/predict/" method="post" target="dummyframe">
             <label class="label" for="no2_value">Mean NO2:</label>
             <input class="input" type="number" placeholder="NO2 Value" name="no2_value" step="0.000001" min="0" max="999.999999"><br><p></p>
             <label class="label" for="so2_value">Mean SO2:</label>
